<resources>
    <string name="app_name">Sample Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_here">New Here!</string>
    <string name="register">Register</string>
    <string name="register_your_self_for_continue">Register Your Self For Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="firebase_db">Firebase DB</string>
    <string name="google_map">Google Map</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="login">Login</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="retrofit">Retrofit</string>
    <string name="update_note">Update Note</string>

    <string name="tab_layout_demo">Tab Layout Demo</string>
    <string name="firebase_db_demo">Firebase Db Demo</string>
    <string name="google_map_demo">Google Map Demo</string>
    <string name="api_integration_with_retrofit">Api Integration with Retrofit</string>

    //Navigation Drawer
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="api_key" translatable="false">AIzaSyBSNyp6GQnnKlrMr7hD2HGiyF365tFlK5U</string>


</resources>