<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/dashboard"/>
        <item
            android:id="@+id/tabLayout"
            android:title="@string/tab_layout"
            android:icon="@drawable/tabmode"/>
        <item
            android:id="@+id/firebaseDb"
            android:title="@string/firebase_db"
            android:icon="@drawable/firebasee"/>
        <item
            android:id="@+id/gMap"
            android:title="@string/google_map"
            android:icon="@drawable/location"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>

    </group>


</menu>