<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/dashboard">

    <fragment
        android:id="@+id/tabLayoutFragment"
        android:name="com.example.sampleapplication.mainUi.fragment.TabLayoutFragment"
        android:label="@string/tab_layout"
        tools:layout="@layout/fragment_tab_layout" >
        <action
            android:id="@+id/action_tabLayoutFragment_to_pageOneFragment"
            app:destination="@id/pageOneFragment" />
        <action
            android:id="@+id/action_tabLayoutFragment_to_pageTwoFragment"
            app:destination="@id/pageTwoFragment" />
    </fragment>
    <fragment
        android:id="@+id/firebaseDbFragment"
        android:name="com.example.sampleapplication.mainUi.fragment.FirebaseDbFragment"
        android:label="@string/firebase_db"
        tools:layout="@layout/fragment_firebase_db" >
        <action
            android:id="@+id/action_firebaseDbFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
        <action
            android:id="@+id/action_firebaseDbFragment_to_addFragment"
            app:destination="@id/addFragment" />
    </fragment>
    <fragment
        android:id="@+id/dashboard"
        android:name="com.example.sampleapplication.mainUi.fragment.HomeFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_dashboard_to_retrofitFragment"
            app:destination="@id/retrofitFragment" />
        <action
            android:id="@+id/action_dashboard_to_tabLayoutFragment"
            app:destination="@id/tabLayoutFragment" />
        <action
            android:id="@+id/action_dashboard_to_firebaseDbFragment"
            app:destination="@id/firebaseDbFragment" />
        <action
            android:id="@+id/action_dashboard_to_mapsActivity"
            app:destination="@id/mapsActivity" />
    </fragment>
    <fragment
        android:id="@+id/pageOneFragment"
        android:name="com.example.sampleapplication.mainUi.fragment.PageOneFragment"
        android:label="fragment_page_one"
        tools:layout="@layout/fragment_page_one" >
        <action
            android:id="@+id/action_pageOneFragment_to_tabLayoutFragment"
            app:destination="@id/tabLayoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/pageTwoFragment"
        android:name="com.example.sampleapplication.mainUi.fragment.PageTwoFragment"
        android:label="fragment_page_two"
        tools:layout="@layout/fragment_page_two" >
        <action
            android:id="@+id/action_pageTwoFragment_to_tabLayoutFragment"
            app:destination="@id/tabLayoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/retrofitFragment"
        android:name="com.example.sampleapplication.mainUi.fragment.RetrofitFragment"
        android:label="@string/retrofit"
        tools:layout="@layout/fragment_retrofit" />
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.sampleapplication.mainUi.fragment.AddFragment"
        android:label="Add Note"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addUpdateFragment_to_firebaseDbFragment"
            app:destination="@id/firebaseDbFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.example.sampleapplication.mainUi.fragment.UpdateFragment"
        android:label="@string/update_note"
        tools:layout="@layout/fragment_update" >
        <action
            android:id="@+id/action_updateFragment_to_firebaseDbFragment"
            app:destination="@id/firebaseDbFragment" />
    </fragment>
    <activity
        android:id="@+id/mapsActivity"
        android:name="com.example.sampleapplication.mainUi.fragment.MapsActivity"
        android:label="@string/google_map_demo"
        tools:layout="@layout/activity_maps" />
</navigation>